--- a/src/app/chess/chess.component.html
+++ b/src/app/chess/chess.component.html
@@ -1,2 +1,5 @@
-<a routerLink="">back</a>
+<a (click)="reset()">reset board</a>
 <ngx-chess-board #board></ngx-chess-board>
+
+
+<a (click)="movePiece()">reset board</a>
