gereksiz enum silindi

--- a/src/app/chess/chess.component.html
+++ b/src/app/chess/chess.component.html
@@ -1,2 +1,3 @@
-<a (click)="reset()">reset board</a>
+
+<div><a (click)="reset()">Resetlemek için tıklayınız</a></div>
 <ngx-chess-board (moveChange)="lastMoves()" #board></ngx-chess-board>
